--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,123 +1,153 @@
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: Arial;
+  font-family: "Open Sans", sans-serif;
 }
 
-/*
-essential styles:
-these make the slideshow work
-*/
+.fa-angle-left,
+.fa-angle-right {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 40px;
+}
+
+.fa-play-circle,
+.fa-pause-circle {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 40vh;
+}
+
 .slides {
   position: relative;
-  height: 90vh;
-  padding: 0px;
-  margin: 0px;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
+  background: #000000;
 }
 
 .slide {
   position: absolute;
-  left: 0px;
-  top: 0px;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  z-index: 1;
+  padding: 40px;
   -webkit-transition: opacity 1s;
   -o-transition: opacity 1s;
   transition: opacity 1s;
-}
-
-.active {
-  opacity: 1;
-  z-index: 2;
-}
-
-/*
-non-essential styles:
-just for appearance; change whatever you want
-*/
-.slide {
+  opacity: 0;
+  background-position: 50% 50%;
+  background-size: cover;
   font-size: 40px;
-  padding: 40px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  background: #333;
-  color: #fff;
+}
+.slide.active {
+  z-index: 1;
+  opacity: 1;
 }
 
-.slide:nth-of-type(1) {
-  background: red;
-}
-
-.slide:nth-of-type(2) {
-  background: orange;
-}
-
-.slide:nth-of-type(3) {
-  background: green;
-}
-
-.slide:nth-of-type(4) {
-  background: blue;
-}
-
-.slide:nth-of-type(5) {
-  background: purple;
-}
-
-/* cusstom */
-.carousel {
-  margin: 1em;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1em;
-}
-
-.slides {
-  grid-column: 1 / span 2;
-}
-
-.indicators,
 .controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 1em;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.indicator,
-.control {
-  background-color: #ccc;
-  cursor: pointer;
-  padding: 1em;
-  -ms-flex-preferred-size: 100px;
-  flex-basis: 100px;
+.control-next, .control-prev, .control-pause {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.indicator.active {
-  background-color: red;
-}
-
-.control-pause > span {
+.control-pause {
+  top: calc(50% - 20vh);
+  left: calc(50% - 20vh);
+  height: 0;
+  padding: 0;
+  -webkit-transition: opacity 0.25s ease-out;
+  -o-transition: opacity 0.25s ease-out;
+  transition: opacity 0.25s ease-out;
   opacity: 0;
+}
+.control-pause:hover, .control-pause:focus {
+  -webkit-transition: opacity 1s ease-in 0.5s;
+  -o-transition: opacity 1s ease-in 0.5s;
+  transition: opacity 1s ease-in 0.5s;
+  opacity: 1;
+  text-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
+}
+.control-pause span {
   position: absolute;
+  display: block;
+  -webkit-transform: translate(50%, 50%);
+      -ms-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+  opacity: 0;
+}
+.control-prev {
+  left: 0;
+  width: 10%;
+}
+.control-prev:hover, .control-prev:focus {
+  color: #ffffff;
+  text-shadow: 0 0 10px #ffffff;
+}
+.control-next {
+  right: 0;
+  width: 10%;
+}
+.control-next:hover, .control-next:focus {
+  color: #ffffff;
+  text-shadow: 0 0 10px #ffffff;
+}
+
+.indicators {
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.indicator {
+  width: 25px;
+  height: 2px;
+  margin: -40px 5px 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  outline: none;
+}
+.indicator:hover {
+  cursor: pointer;
+}
+.indicator.active {
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .control-next, .control-prev, .control-pause {
+    cursor: pointer;
+  }
+  .indicator {
+    cursor: pointer;
+  }
 }
